--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^3.0.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
